<resources>
    <string name="app_name">Backblur</string>
    <string name="permission_required">Backblur requires the Storage permission in order to get and save images.</string>
    <string name="choose_image">Choose image</string>
    <string name="save">Save</string>
    <string name="image_size">Image size</string>
    <string name="blur_radius">Blur radius</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="licenses">Licenses</string>
    <string name="saved_image">Saved image</string>
    <string name="error_title">There was an error</string>
    <string name="error_content">The app couldn\'t save the image. Sorry :(</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="select_gallery_app">Select gallery app</string>
</resources>
